# error-iter

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: dyn_error.rs  simple.rs
src/: lib.rs
