[package]
name = "error-iter"
description = "Error::sources on stable Rust"
repository = "https://github.com/parasyte/error-iter"
version = "1.0.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
rust-version = "1.56"
readme = "README.md"
keywords = ["error", "iter", "iterator", "recursive", "sources"]
categories = ["rust-patterns"]
license = "MIT"

[badges]
maintenance = { status = "passively-maintained" }

[dev-dependencies]
thiserror = "1"
